--- a/src/main/resources/vladimir/methotels/components/Layout.tml
+++ b/src/main/resources/vladimir/methotels/components/Layout.tml
@@ -1,81 +1,85 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd"
-        >
-<head>
-    <meta charset="utf-8" />
-    <title>${title}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+      >
+    <head>
+        <meta charset="utf-8" />
+        <title>${title}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <link rel="shortcut icon" href="${asset:context:images/favicon.ico}" />
+    </head>
 
-    <!-- Le styles -->
-    <style type="text/css">
-        body {
-            padding-top: 60px;
-            padding-bottom: 40px;
-        }
-    </style>
+    <body>
 
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="../assets/js/html5shiv.js"></script>
-    <![endif]-->
-
-    <!-- Fav and touch icons -->
-    <link rel="shortcut icon" href="${asset:context:/favicon.ico}" />
-</head>
-
-<body>
-
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-	    <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <t:pagelink page="index" class="navbar-brand">app</t:pagelink>
+        <div class='navbar navbar-default navbar-static-top'>
+            <div class="container">
+                <a href="index.html" class="navbar-brand">Met Hotels</a>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-controls="navbar">
+                    <i class='glyphicon glyphicon-align-justify'></i>
+                </button>
+                <div id="navbar" class="navbar-collapse collapse pull-right">
+                    <ul class="nav navbar-nav">
+                        <li><a href="Index">Home</a></li>
+                        <li><a href="AddRoom">DZ-05</a></li>
+                        <li><a href="NewRoom">DZ-06</a></li>
+                        <li><a href="#">Transport</a></li>
+                        <li><a href="#">Contact us</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <t:loop source="pageNames" value="pageName">
-                    <t:any element="li" class="prop:classForPageName">
-                        <t:pagelink page="prop:pageName">${pageName}</t:pagelink>
-                    </t:any>
-                </t:loop>
-            </ul>
-            <span class="navbar-right">
-                <li>
-                    <t:pagelink page="login" class="btn btn-default navbar-btn">Sign in</t:pagelink>
-               	</li>
-            </span>
 
-        </div><!--/.nav-collapse -->
-    </div>
-</div>
 
-<div class="container">
-    <div class="row">
-        <div class="span12">
-            <t:alerts/>
+        <t:body />
+
+        <div style="height: 20px"></div>
+
+        <div class="footer">
+            <div style="height: 20px"></div>
+            <div class="row">
+                <div class="col-sm-1"></div>
+                <div class="col-sm-4">
+                    <h5 class="text-center">Hotels</h5>
+                    <hr></hr>
+                    <ul>
+                        <li>Beograd</li>
+                        <li>Nis</li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h5 class="text-center">Events</h5>
+                    <hr></hr>
+                    <ul>
+                        <li>Basketball</li>
+                        <li>Soccer</li>
+                        <li>Baseball</li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h5 class="text-center">Links</h5>
+                    <hr></hr>
+                    <ul>
+                        <li>Metropolitan</li>
+                        <li>Turisticka agencija</li>
+                        <li>Tvrdjava</li>
+                    </ul>
+                </div>
+                <div class="col-sm-1"></div>
+            </div>
+            <div style="height: 30px"></div>
         </div>
-    </div>
-</div>
 
-<div class="container">
+        <div class="text-center author">
+            <p>IT250 - Web sistemi</p>
+            <p>Vladimir Ranđelović, 1557</p>
+        </div>
 
-    <t:body />
+        <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+        <script src='js/bootstrap.js'></script>
 
-    <hr />
 
-    <footer>
-        <p>&copy; Your Company 2014</p>
-    </footer>
 
-</div> <!-- /container -->
-
-</body>
+    </body>
 </html>
