--- a/src/main/resources/vladimir/methotels/pages/Index.tml
+++ b/src/main/resources/vladimir/methotels/pages/Index.tml
@@ -1,48 +1,86 @@
-<html t:type="layout" title="MetHotels Index"
+<html t:type="layout" title="mavenproject1 Index"
       t:sidebarTitle="Framework Version"
       xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd"
       xmlns:p="tapestry:parameter">
 
-    <!-- Most of the page content, including <head>, <body>, etc. tags, comes from Layout.tml -->
+<div class='container-fluid'>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
 
-    <!-- Main hero unit for a primary marketing message or call to action -->
-    <div class="hero-unit">
-        <p>
-            <img src="${asset:context:images/tapestry.png}"
-                 alt="${message:greeting}" title="${message:greeting}" />
-        </p>
-        <h3>${message:greeting}</h3>
-        <p>The current time is: <strong>${currentTime}</strong></p>
-        <p>
-            This is a template for a simple marketing or informational website. It includes a large callout called
-            the hero unit and three supporting pieces of content. Use it as a starting point to create something
-            more unique.
-        </p>
-        <p><t:actionlink t:id="learnmore" class="btn btn-primary btn-large">Learn more &raquo;</t:actionlink></p>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <img src="${asset:context:images/slider-07.jpg}" alt="${message:greeting}" title="${message:greeting}" />
+            </div>
+
+            <div class="item">
+                <img src="${asset:context:images/slider-08.jpg}" alt="${message:greeting}" title="${message:greeting}" />
+            </div>
+
+            <div class="item">
+                <img src="${asset:context:images/slider-09.jpg}" alt="${message:greeting}" title="${message:greeting}" />
+            </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
+</div>
 
-    <!-- Example row of columns -->
+<div style="height: 0px"></div>
+
+<div class='jumbotron'>
     <div class="row">
-        <div class="span4">
-            <h2>Normal link</h2>
-            <p>Clink the bottom link and the page refresh with event <code>complete</code></p>
-            <p><t:eventlink event="complete" class="btn" >Complete&raquo;</t:eventlink></p>
+        <div class='col-md-5 col-md-offset-1'>
+            <h2>Exclusive Offer</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <button type='button' class="btn btn-primary" style="margin-right: 10px;">Take the Tour</button>
+            <button type='button' class="btn btn-danger">Book Tickets Now</button>
         </div>
-        <t:zone t:id="middlezone" class="span4">
-
-        </t:zone>
-        <div class="span4">
-            <h2>Ajax link</h2>
-            <p>Click the bottom link to update just the middle column with Ajax call with event <code>ajax</code></p>
-            <p><t:eventlink event="ajax" zone="middlezone" class="btn" >Ajax&raquo;</t:eventlink></p>
+        <div class='col-md-5 pic'>
+            <img src="${asset:context:images/intro.jpg}" alt="${message:greeting}" title="${message:greeting}" />
         </div>
     </div>
+</div>
 
-    <t:block t:id="block">
-        <h2>Ajax updated</h2>
-        <p>I'v been updated through AJAX call</p>
-        <p>The current time is: <strong>${currentTime}</strong></p>
-        <t:alerts />
-    </t:block>
+
+<div class='container-fluid'>
+    <div class="raw">
+        <div class='col-sm-4 col-md-offset-1'>
+            <h3 class="glyphicon glyphicon-ok-sign"> Book Today!</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+        </div>
+
+        <div class='col-sm-3'>
+            <h3 class="glyphicon glyphicon-random"> Our Resources</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+        </div>
+
+        <div class='col-sm-3'>
+            <h3 class="glyphicon glyphicon-shopping-cart"> Shopping</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+        </div>
+    </div>
+</div>
 
 </html>
